# Cloud-Service-Console

./: .gitignore  AGENT_V3_MIGRATION_GUIDE.md  README.md  package.json
.github/workflows/: release-windows.yml
backend/: cloud_client.py  cloud_setup.py  config.py  health_checker.py  launcher.py  log_store.py  main.py  models.py  requirements.txt  service_manager.py  settings_store.py  tank_trouble_cloud.py  tank_trouble_preview_page.py  tank_trouble_preview_runtime.py
backend/cloud_setup_bundle/: control_signaling.py  tank_trouble_room.py  telemetry_relay.py
backend/cloud_setup_bundle/config/: sender-cloud.config.json
backend/cloud_setup_bundle/www/: index.html  main-camera-video.html  main-camera.html  snapshot.html  webrtc.html
docs/: AGENT_HANDOFF_MASTER_INDEX.md  CONTROL_SIGNAL_AGENT.md  CONTROL_SIGNAL_FULL_SETUP_GUARD.md  TANK_TROUBLE_AGENT.md  UI_DESIGN_AGENT.md  VIDEO_LINK_AGENT.md
frontend/: IMPLEMENTATION_LOG.md  README.md  UI_AGENT_SPEC.md  UI_Agent_长期需求规范.md  index.html  package-lock.json  package.json
frontend/public/flags/: SOURCE-circle-flags.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: cloudApi.ts
frontend/src/components/: ActivityLog.tsx  AppShell.tsx  Button.tsx  HealthPanel.tsx  MetricCard.tsx  ServiceCard.tsx  Sidebar.tsx  StatusBadge.tsx  SummaryCard.tsx  TankTroublePanel.tsx  ToggleSwitch.tsx  Topbar.tsx  UpdateAction.tsx
frontend/src/styles/: globals.css  (+1 more)
scripts/: build_backend_bundle.py  make_icon.py  update_versions.py  watch_console_processes.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+6 files in other folders)
