[package]
name = "cloud-service-console"
version = "0.3.50"
description = "Cloud Service Console v3 desktop shell"
authors = ["OpenAI Codex"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "1.6", features = ["process-command-api", "shell-open", "updater"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
